@@ -916,7 +916,9 @@ int fileno(FILE *stream);
 #endif
 
 #ifndef _WIN32
+#ifndef HAVE_GETADDRINFO
 E adns_state adns;
+#endif
 #endif
 E GeoIP *gidb;
 E GeoIP *gidb_v6;
