@@ -418,7 +418,9 @@ void denora_shutdown(void)
 		rdb_close();
 	}
 #ifndef _WIN32
+#ifndef HAVE_GETADDRINFO
 	adns_finish(adns);
+#endif
 #endif
 	if (gidb)
 	{
@@ -491,7 +493,9 @@ int main(int ac, char **av)
 #endif
 
 #ifndef _WIN32
+#ifndef HAVE_GETADDRINFO
 	adns_init(&adns, adns_if_noenv, 0);
+#endif
 #endif
 #ifdef STATS_DIR
 	GeoIP_setup_custom_directory((char *)STATS_DIR);
@@ -665,7 +669,7 @@ int main(int ac, char **av)
 		}
 
 		waiting = 1;
-		i = (long int)sgets2(inbuf, sizeof(inbuf), servsock);
+		i = (long int)sgets2(inbuf, sizeof(inbuf), servsock); 
 		waiting = 0;
 		if ((i > 0) || (i < (-1)))
 		{
