@@ -3,7 +3,7 @@ Denora v1.5.0-git
 -------------
 
 Additions
-12/07/09 Making preparations to get rid of adns
+12/07/09 Don't use adns if getaddrinfo is available (adns has no ipv6 support)
 12/06/12 Added channelmode +R to scarynet
 12/04/20 Added country lookup for servers to support #46@magirc
 11/04/22 r432 Added parameter support for !stats and !gstats
@@ -31,6 +31,7 @@ Changes
 11/02/11 r416 Updated Windows installer
 
 Fixes
+12/07/09 More warning fixes
 12/07/08 Lots of changes in users.c/channels.c/ctcp.c
 12/07/08 Fixed p10_gline to support 2.10.12's 6 arg gline format
 12/07/02 Fixed Config not respecting DMEMORY settings, also did MYSQL the correct way now
